# socios.es.python.org

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  LICENSE  README.rst  docker-compose.yml  local.yml  manage.py  production.yml  pyproject.toml
compose/local/django/: Dockerfile
compose/production/django/: Dockerfile  start
compose/production/nginx/: Dockerfile  nginx.conf
compose/production/postgres/: Dockerfile
config/: asgi.py  router.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: Makefile  conf.py  index.rst  make.bat
docs/overview/: backups.rst  development.rst  production.rst  users.rst
docs/reference/: api.rst  auth.rst
docs/reference/api/: users.rst
docs/reference/auth/: facebook.rst  google.rst  jwt.rst  oauth.rst
locale/en/LC_MESSAGES/: django.po
locale/es/LC_MESSAGES/: django.po
pythonspain/: conftest.py
pythonspain/banks/: admin.py  apps.py  helpers.py  models.py  tasks.py
pythonspain/banks/migrations/: 0001_initial.py  0002_alter_consignmentimport_id.py  0002_auto_20200329_2039.py  0003_auto_20200329_2055.py
pythonspain/banks/tests/: consignments.xls  test_helpers.py
pythonspain/core/: helpers.py  models.py
pythonspain/partners/: admin.py  api.py  apps.py  constants.py  emails.py  helpers.py  managers.py  models.py  serializers.py  tasks.py
pythonspain/taskapp/: celery.py
pythonspain/templates/: base.html
pythonspain/users/: admin.py  apps.py  emails.py  forms.py  helpers.py  managers.py  models.py  urls.py  views.py
(+46 files in other folders)
